add movers and stuff

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes scrollText {
+  0% {
+      transform: translateX(0);
+  }
+  100% {
+      transform: translateX(calc(-1 * var(--text-width)));
+  }
+}
+
+.animate-scroll-text {
+  animation: scrollText;
+}
+
 @layer base {
   body {
     @apply bg-black text-white antialiased;
