--- a/src/index.css
+++ b/src/index.css
@@ -4,112 +4,121 @@
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .hide-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 
 .frosted-glass {
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
 }
 
 .frosted-glass:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  box-shadow: inset 0 0 20000px rgba(30,30,30, 0.1);
-  filter: blur(10px);
-  margin: -20px;
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    box-shadow: inset 0 0 20000px rgba(30, 30, 30, 0.1);
+    filter: blur(10px);
+    margin: -20px;
 }
 
 @keyframes scrollText {
-  0% {
-      transform: translateX(0);
-  }
-  100% {
-      transform: translateX(calc(-1 * var(--text-width)));
-  }
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-1 * var(--text-width)));
+    }
 }
 
 .animate-scroll-text {
-  animation: scrollText;
+    animation: scrollText;
 }
 
 @layer base {
-  body {
-    @apply bg-black text-white antialiased;
-  }
+    body {
+        @apply bg-black text-white antialiased;
+    }
 }
 
 @layer utilities {
-  .backdrop-blur-xl {
-    backdrop-filter: blur(20px);
-  }
+    .backdrop-blur-xl {
+        backdrop-filter: blur(20px);
+    }
 }
 
 /* if we are on a mobile device, we want to have different vignette props */
 @media (max-width: 1024px) {
-  .blur-vignette {
-    --top-inset: 2rem;
-    --bottom-inset: 7rem;
-    --top-transition: 7rem;
-    --bottom-transition: 12rem;
-    --blur: 6px;
-  }
+    .blur-vignette {
+        --top-inset: 5%;
+        --bottom-inset: 17%;
+        --top-transition: 20%;
+        --bottom-transition: 20%;
+        --blur: 5px;
+    }
 }
 
 /* if we are on a desktop device, we want to have different vignette props */
 @media (min-width: 1024px) {
-  .blur-vignette {
-    --top-inset: 2rem;
-    --bottom-inset: 4rem;
-    --top-transition: 7rem;
-    --bottom-transition: 6rem;
-    --blur: 6px;
-  }
+    .blur-vignette {
+        --top-inset: 2rem;
+        --bottom-inset: 4rem;
+        --top-transition: 7rem;
+        --bottom-transition: 6rem;
+        --blur: 6px;
+    }
 }
 
-.blur-vignette {
-  z-index: 1;
-  position: absolute;
-  inset: 0;
-  -webkit-backdrop-filter: blur(var(--blur));
-  backdrop-filter: blur(var(--blur));
-  pointer-events: none; /* Allows clicking through the vignette */
-  
-  /* Separated gradient for more control */
-  --top-gradient: 
-    black,
-    black var(--top-inset),
-    transparent calc(var(--top-inset) + var(--top-transition));
-  
-  --bottom-gradient:
-    transparent calc(100% - var(--bottom-transition) - var(--bottom-inset)),
-    black calc(100% - var(--bottom-inset)),
-    black;
-    
-  -webkit-mask-image: linear-gradient(
-    to bottom,
-    var(--top-gradient),
-    transparent 50%,
-    var(--bottom-gradient)
-  );
-  -webkit-mask-size: 100% 100%;
-  -webkit-mask-position: 0 0;
-  -webkit-mask-repeat: no-repeat;
-  
-  /* Fix for potential clipping */
-  width: 180%;
-  height: 100%;
-  overflow: visible;
+/* only blur-vignette on devices that support mask-image */
+@supports (-webkit-mask-image: linear-gradient(to bottom, black, black)) {
+    .blur-vignette {
+        z-index: 1;
+        position: absolute;
+        inset: 0;
+        -webkit-backdrop-filter: blur(var(--blur));
+        backdrop-filter: blur(var(--blur));
+        pointer-events: none; /* Allows clicking through the vignette */
+
+        /* Separated gradient for more control */
+        --top-gradient: black, black var(--top-inset),
+            transparent calc(var(--top-inset) + var(--top-transition));
+
+        --bottom-gradient: transparent
+                calc(100% - var(--bottom-transition) - var(--bottom-inset)),
+            black calc(100% - var(--bottom-inset)), black;
+
+        -webkit-mask-image: linear-gradient(
+            to bottom,
+            var(--top-gradient),
+            transparent 50%,
+            var(--bottom-gradient)
+        );
+        mask-image: linear-gradient(
+            to bottom,
+            var(--top-gradient),
+            transparent 50%,
+            var(--bottom-gradient)
+        );
+        -webkit-mask-size: 100% 100%;
+        mask-size: 100% 100%;
+        -webkit-mask-position: 0 0;
+        mask-position: 0 0;
+        -webkit-mask-repeat: no-repeat;
+        mask-repeat: no-repeat;
+
+        /* Fix for potential clipping */
+        width: 180%;
+        height: 100%;
+        overflow: visible;
+    }
 }
