fix obs source issue?

--- a/src/index.css
+++ b/src/index.css
@@ -77,16 +77,16 @@
 /* if we are on a desktop device, we want to have different vignette props */
 @media (min-width: 1024px) {
     .blur-vignette {
-        --top-inset: 2rem;
-        --bottom-inset: 4rem;
-        --top-transition: 7rem;
-        --bottom-transition: 6rem;
-        --blur: 6px;
+        --top-inset: 5%;
+        --bottom-inset: 17%;
+        --top-transition: 20%;
+        --bottom-transition: 20%;
+        --blur: 5px;
     }
 }
 
 /* only blur-vignette on devices that support mask-image */
-@supports (-webkit-mask-image: linear-gradient(to bottom, black, black)) {
+@supports (mask-image: linear-gradient(to bottom, transparent 0rem, black 8rem, black 50%, #000f 85%, transparent 98%)) {
     .blur-vignette {
         z-index: 1;
         position: absolute;
