--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  html {
+  html, body {
     font-family: "Inter", system-ui, sans-serif;
     overflow: hidden;
   }
